# azu

./: .gitignore  CAMERA_CONTROLS_UPDATE.md  CMakeLists.txt  HYPERPARAMETER_GUIDE.md  KNOWLEDGE_BASE.md  README.md  REGRESSION_REVIEW.md  rocm.md  test_colors
build-cpu/: compile_commands.json
build-cpu/KinectFusionQt_autogen/: deps
build-cpu/include/gui/: moc_ControlPanel.cpp_parameters_Release  moc_MainWindow.cpp_parameters_Release  moc_MetricsPanel.cpp_parameters_Release  moc_OpenGLWidget.cpp  moc_OpenGLWidget.cpp_parameters_Release
build-cuda/: compile_commands.json
build-cuda/KinectFusionQt_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-cuda/KinectFusionQt_autogen/BMPI5EA7AM/: moc_ControlPanel.cpp  moc_ControlPanel.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MetricsPanel.cpp  moc_MetricsPanel.cpp.d  moc_NavigationGizmo.cpp  moc_NavigationGizmo.cpp.d  moc_OpenGLWidget.cpp  moc_OpenGLWidget.cpp.d
build-cuda/include/gui/: moc_ControlPanel.cpp_parameters_Release  moc_MainWindow.cpp_parameters_Release  moc_MetricsPanel.cpp_parameters_Release  moc_OpenGLWidget.cpp_parameters_Release
build-test-cuda/: compile_commands.json
build-test-cuda/include/gui/: moc_ControlPanel.cpp  moc_ControlPanel.cpp_parameters_Release  moc_MainWindow.cpp_parameters_Release  moc_MetricsPanel.cpp_parameters_Release  moc_OpenGLWidget.cpp_parameters_Release
build-ui/: compile_commands.json
build-ui/KinectFusionQt_autogen/: deps
build-ui/include/gui/: moc_ControlPanel.cpp  moc_ControlPanel.cpp_parameters_Release  moc_MainWindow.cpp_parameters_Release  moc_MetricsPanel.cpp_parameters_Release  moc_OpenGLWidget.cpp_parameters_Release
include/app/: Application.h  FusionHyperparams.h  JobSystem.h  PipelineController.h
include/export/: GLBExporter.h  PLYExporter.h
include/gui/: ControlPanel.h  MainWindow.h  MetricsPanel.h  NavigationGizmo.h  OpenGLWidget.h  UiScale.h
include/meshing/: MarchingCubes.h  MeshData.h
include/rendering/: Camera.h  PreviewRenderer.h  ShaderProgram.h
include/sensor/: FrameData.h  KinectSensor.h  Preprocessor.h  SignalConditioner.h  SuperResolution.h
include/tracking/: ICPTracker.h
include/tsdf/: TSDFVolume.h  VoxelGPU.h
include/utils/: CudaUniquePtr.h  HipUniquePtr.h  Logger.h  RingBuffer.h  Timer.h
scripts/: build.sh  fetch_deps.sh
src/: main.cpp
src/app/: Application.cpp  JobSystem.cpp  PipelineController.cpp
src/export/: ExportBase.cpp  ExportBase.hpp  Exporter.hpp  GLBExporter.cpp  GLBExporter.hpp  PLYExporter.cpp  PLYExporter.hpp
src/gui/: ControlPanel.cpp  MainWindow.cpp  MainWindow.hpp  MetricsPanel.cpp  NavigationGizmo.cpp  OpenGLWidget.cpp
src/meshing/: MarchingCubes.cpp  MarchingCubes.hpp  MarchingCubes_cuda.cu  MarchingCubes_hip.hip  MeshData.cpp
src/rendering/: Camera.cpp  GLRenderWidget.cpp  GLRenderWidget.hpp  PreviewRenderer.cpp  ShaderProgram.cpp
src/sensor/: FrameData.cpp  KinectSensor.cpp  KinectSensor.hpp  Preprocessor.cpp  SignalConditioner_cuda.cu  SignalConditioner_hip.hip  SignalConditioner_omp.cpp  SuperResolution.cpp  SuperResolution_cuda.cu  SuperResolution_hip.hip
src/tracking/: ICPTracker.cpp  ICPTracker.hpp  ICPTracker_cuda.cu  ICPTracker_hip.hip  PointToPlaneICP.cpp  PointToPlaneICP.hpp  PyramidLevel.cpp
src/tsdf/: TSDFVolume.cpp  TSDFVolume.cu  TSDFVolume.hpp  TSDFVolume_cuda.cu  TSDFVolume_hip.hip
src/utils/: CameraModel.cpp  CameraModel.hpp  Logger.cpp  Logger.hpp  Math.hpp  RingBuffer.cpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp  Timer.cpp  Types.hpp
udev/: 99-kinect.rules
